firt version tcc2

--- a/tcc2/editaveis/introducao.tex
+++ b/tcc2/editaveis/introducao.tex
@@ -80,8 +80,8 @@ compreendem variações de humor, irritabilidade, ansiedade, entre outros. Essas
 classificadas como transtorno disfórico pré-menstrual (TDPM) \cite{ACOG2000}.
 
 Esse estudo fundamenta-se no fato de que o ciclo menstrual influencia as emoções e os comportamentos 
-das mulheres. Como contribuição principal, propõe-se um aplicativo de recomendação, o qual procurará 
-indicar tarefas cotidianas que seriam mais fáceis ou mais difíceis de serem realizadas, dependendo do 
+das mulheres. Como contribuição principal, implemta-se um aplicativo de recomendação, o qual 
+indica tarefas cotidianas que seriam mais fáceis ou mais difíceis de serem realizadas, dependendo do 
 perfil e da fase do ciclo menstrual que a mulher se encontra, além de conferir informações sobre como 
 a fase possivelmente influencia em suas habilidades. Espera-se que esse conhecimento beneficie, 
 adicionalmente, a inteligência emocional e, consequentemente, o desempenho cognitivo individual das 
@@ -134,7 +134,7 @@ Nesse sentido, as seguintes questões de pesquisa nortearão o trabalho, sendo:
 
 \begin{itemize}
 
-        \item Se existe essa influência das fases do ciclo menstrual na vida das mulheres, como adquirir esse conhecimento?
+        \item Como as fases do ciclo menstrual influência na execução de tarefas cotidianas das mulheres?
 
         \item Por que seria importante adquirir esse conhecimento? 
 
@@ -166,7 +166,7 @@ Seguem os objetivos Geral e Específicos atrelados a esse trabalho.
 \subsection{Objetivo Geral}
 
 
-Esse estudo propõe um aplicativo informativo e de recomendações de tarefas com base no perfil e 
+Esse estudo implementa um aplicativo informativo e de recomendações de tarefas com base no perfil e 
 nas fases do ciclo menstrual, no intuito de apoiar as mulheres na identificação de mudanças; 
 no autoconhecimeno; na inteligência emocional, e na produtividade pessoal.
 
@@ -202,11 +202,11 @@ A monografia está organizada nos seguintes capítulos:
         
         \item Capítulo 4 - Metodologia: acorda o plano metodológico que orienta o presente trabalho em termos conceituais, bem como de análise de resultados;
 
-        \item Capítulo 5 - Mina: apresenta o aplicativo de recomendação em si, e
+        \item Capítulo 5 - Mina: apresenta o aplicativo em si;
 
         \item Capítulo 6 - Resultados Obtidos: acorda os resultados alcançados com a realização do trabalho, e
         
-        \item Capítulo 7 - Conclusão: apresenta melhorias e features a serem implementadas
+        \item Capítulo 7 - Considerações Finais: apresenta melhorias e features a serem implementadas
         no futuro.
 
 \end{itemize}
