--- a/tcc2/editaveis/metodologia.tex
+++ b/tcc2/editaveis/metodologia.tex
@@ -10,7 +10,7 @@ das atividades que foram desenvolvidas na primeira parte do trabalho (TCC1), e a
 A seção 4.5 focará na metodologia de desenvolvimento. A seção 4.6 apresenta como foi conduzida 
 a análise de resultados. 
 Por fim, a seção 4.7 ilustra 
-o cronograma das atividades já desenvolvidas ao longo desse trabalho.
+o cronograma das atividades desenvolvidas ao longo desse trabalho.
 
 
 \section{Classificação da Pesquisa}
@@ -99,7 +99,7 @@ possíveis aplicações da engenharia de software sobre o tema.
 
 \textbf{Criar grupo para estudo de caso}: foi criado um grupo com mulheres em idade 
 fértil, 
-que se interessaram pelo tema e resolveram apoiá-lo. Esse grupo é e será utilizado 
+que se interessaram pelo tema e resolveram apoiá-lo. Esse grupo foi utilizado 
 para o estudo de caso.
 
 \textbf{Realizar levantamento bibliográfico}: nessa etapa, foi obtido um conhecimento 
@@ -140,7 +140,7 @@ de avaliar a viabilidade do projeto e das tecnologias escolhidas.
 
 \textbf{Implementar aplicação}: atividade desenvolvida no TCC2, gerou o aplicativo Mina como artefato.
 
-\textbf{Analisar resultados}: Atividade desenvolvida no TCC2 e com o objetivo de
+\textbf{Analisar resultados}: Atividade desenvolvida no TCC2 com o objetivo de
 analisar os resultados obtidos com a implementação da aplicação, conferindo se ela atende 
 aos objetivos gerais e específicos estabelecidos no Capítulo 1 desta monografia.
 
@@ -151,12 +151,6 @@ Os temas foram separados em duas partes: influências do ciclo menstrual e siste
 Para as influências do ciclo menstrual, vale ressaltar que é um tema ainda pouco abordado na literatura e existem 
 várias discrepâncias entre os estudos, por isso foram selecionados aqueles que apoiavam a tese de que 
 o ciclo influencia de alguma forma as habilidades cognitivas, motoras e sensoriais. 
-
-%A partir da plataforma Scielo, foi utilizada a seguinte string de busca:
-
-%((((((Menstrual cycle influence) OR (Menstrual cycle)) AND NOT (pregnancy)) AND NOT (sexual) ) AND (phases of the menstrual cycle) AND (phases of the menstrual cycle phases)) AND NOT (teenagers)) AND NOT (sports).
-
-%Ela resultou em 40 artigos e foram feitas leituras parciais dos artigos mais relevantes. A partir desses, três trabalhos foram selecionados para compor a referência bibliográfica desse trabalho.
 
 A partir do periódico capes, foi utilizada a seguinte \emph{string} de busca:
 qualquer um que contém \emph{menstrual cycle influence} e qualquer um que contém 
@@ -194,7 +188,7 @@ em execução. Quando finalizadas, as tarefas são movidas para a coluna feito.
 
 No escopo do TCC2, além do Kanban, utilizado para o gerenciamento das tarefas relativas a escrita 
 a serem desenvolvidas no TCC2,
-também será utilizado um processo baseado em metodologias ágeis, mais especificamente, no Scrum \cite{scrum2017}. O fluxo de desenvolvimento 
+também foi utilizado um processo baseado em metodologias ágeis, mais especificamente, no Scrum \cite{scrum2017}. O fluxo de desenvolvimento 
 pela metodologia Scrum é demonstrado na Figura \ref{fig05}.
 
 
@@ -246,9 +240,9 @@ para a entrada no grupo do estudo de caso.
 A determinação das questões foi feita através de conversas com as 
 integrantes do grupo bem como com base nos estudos documentados no 
 referencial teórico, Capitúlo \ref{ch:referencial}. Isso possibilitou a aplicação de 
-um questionário para coleta de dados, descrito no Capítulo 5.
+três questionários para coleta de dados, descrito no Capítulo 5 e 6.
 
-Por fim, a preparação do relatório deu-se após a aplicação do questionário, acordado na etapa anterior
+Por fim, a preparação do relatório deu-se após a aplicação de cada questionário, acordado na etapa anterior
 
 \section{Cronograma}
 
