--- a/tcc2/editaveis/proposta.tex
+++ b/tcc2/editaveis/proposta.tex
@@ -84,7 +84,7 @@ Ficou definido, então, que seria um aplicativo.
 
 \subsection{Primeiro Questionário}
 
-A Tabela \ref{tab06} e a Tabela \ref{tab07} apresentam as questões que foram utilizadas para o primeiro ciclo de coleta de dados sobre o ciclo menstrual e 
+A Tabela \ref{tab07} e a Tabela \ref{tab08} apresentam as questões que foram utilizadas para o primeiro ciclo de coleta de dados sobre o ciclo menstrual e 
 sua influência. O questionário\footnote{segundo questionário : https://forms.gle/4Q3HoyXydcY89TjY9} foi feito utilizando a plataforma Google Forms e foi respondido de forma anônima, para que as
 participantes se sentissem mais confortáveis respondendo-o. Ao todo, o questionário contou com 31 perguntas, sendo 20 fechadas e 
 11 abertas. Foram recebidas 23 respostas até a data 18/03/2020.
@@ -92,7 +92,7 @@ participantes se sentissem mais confortáveis respondendo-o. Ao todo, o question
 \begin{table}[ht]
     \centering
     \caption{Perguntas Fechadas do Questionário}
-    \label{tab06}
+    \label{tab07}
     \begin{tabular}{c}
         \toprule
         \textbf{Perguntas fechadas} \\
@@ -144,7 +144,7 @@ participantes se sentissem mais confortáveis respondendo-o. Ao todo, o question
 \begin{table}[ht]
     \centering
     \caption{Perguntas Abertas do Questionário}
-    \label{tab07}
+    \label{tab08}
     \begin{tabular}{c}
         \toprule
         \textbf{Perguntas abertas} \\
@@ -184,15 +184,16 @@ dos gráficos não oferecidos
 pelo Google Forms. A partir dessa tabulação, foi possível extrair informações dos perfis, 
 sintomas e tarefas que iriam compor o sistema de recomendação.
 
-Alguns perfis foram identificados a partir do questionário e são listados na Tabela \ref{tab08}. 
+Alguns perfis foram identificados a partir do questionário e são listados na Tabela \ref{tab09}. 
 Quase todos os perfis têm sintomas durante todas as fases, menos quando se trata da ovulação, porque aquelas 
 que utilizam métodos contraceptivos hormonais não ovulam. As mulheres com distúrbio endócrinos 
 que não utilizam metodos contraceptivos hormonais relataram ter ciclos irregulares, o que pode acabar afetando 
 as recomendações das tarefas por causa da imprecisão em determinar qual fase do ciclo ela se encontra.
 
 \begin{table}[] 
+    \centering
     \caption{Perfis Mapeados}
-    \label{tab08} 
+    \label{tab09} 
     \begin{tabular}{|l|c|c|c|}
     \hline
     \rowcolor[HTML]{C0C0C0} 
@@ -215,7 +216,7 @@ recomendadas. Surgiu então a necessidade de ter dados específicos mapeados ent
 para cada fase. 
 
 Decidiu-se aplicar mais um questionário especifico para as tarefas.
-A Tabela \ref{tab09} apresenta as questões que foram utilizadas para o segundo ciclo de coleta 
+A Tabela \ref{tab10} apresenta as questões que foram utilizadas para o segundo ciclo de coleta 
 de dados sobre o ciclo menstrual e 
 sua influência. As quatro ultimas perguntas listavam as tarefas, estudar, trabalhar, exercitar, arrumar a casa, 
 ler, fazer reuniões, socializar, escrever, ouvir música, assistir série/tv, desenhar e criar. As 
@@ -223,13 +224,13 @@ mulheres tinham que responder se essas tarefas são mais fáceis, neutras ou mai
 a depender da fase do ciclo. 
 
 Para esse questionário as mulheres não passaram por uma preparação prévia, mas estive disponível o tempo 
-todo para sanar eventuais dúvidas que pudessem surgir mas não houve difículdade por parte das mulheres 
+todo para sanar eventuais dúvidas que pudessem surgir, apesar disso não houve manifestação de difículdade por parte das mulheres 
 para responder o questionário.
 
 \begin{table}[ht]
     \centering
     \caption{Perguntas Segundo Questionário}
-    \label{tab09}
+    \label{tab10}
     \begin{tabular}{c}
         \toprule
         \textbf{Perguntas fechadas} \\
@@ -279,7 +280,7 @@ são mais propensas a serem realizadas com uma certa facilidade, as neutras são
 notaram mudanças significativas e as mais difíceis são tarefas em que as mulheres podem encontrar difículdade 
 na execução.
 
-Nas Tabelas \ref{tab10},\ref{tab11},\ref{tab12} e \ref{tab13} seta $\uparrow$ tarefas mais fáceis; a seta $\downarrow$ indica tarefas mais difíceis, e - para neutro. As tarefas 
+Nas Tabelas \ref{tab11},\ref{tab12},\ref{tab13} e \ref{tab14} seta $\uparrow$ tarefas mais fáceis; a seta $\downarrow$ indica tarefas mais difíceis, e - para neutro. As tarefas 
 foram classificadas de acordo com a média de votos das pessoas correspondentes ao perfil. Por exemplo, duas 
 pessoas que não tomam anticoncepcional e não possuem distúrbio endócrino, na fase folicular incial, 
 uma votou que escrever é fácil e outra que é difícil, então os pontos empataram e as tarefas são consideradas neutras.
@@ -289,7 +290,7 @@ na seção 4.3.3 deste capítulo.
 \begin{table}[]
     \centering
     \caption{Relação de Tarefas Grupo 1}
-    \label{tab10}
+    \label{tab11}
     \begin{tabular}{|l|c|c|c|c|}
     \hline
     \rowcolor[HTML]{C0C0C0} 
@@ -319,7 +320,7 @@ na seção 4.3.3 deste capítulo.
     \begin{table}[]
         \centering
         \caption{Relação de Tarefas Grupo 2}
-        \label{tab11}
+        \label{tab12}
         \begin{tabular}{|l|c|c|c|c|}
         \hline
         \rowcolor[HTML]{C0C0C0} 
@@ -351,7 +352,7 @@ na seção 4.3.3 deste capítulo.
         \begin{table}[]
             \centering
             \caption{Relação de Tarefas Grupo 3}
-            \label{tab12}
+            \label{tab13}
             \begin{tabular}{|l|c|c|c|c|}
             \hline
             \rowcolor[HTML]{C0C0C0} 
@@ -381,7 +382,7 @@ na seção 4.3.3 deste capítulo.
 \begin{table}[]
     \centering
     \caption{Relação de Tarefas Grupo 4}
-    \label{tab13}
+    \label{tab14}
     \begin{tabular}{|l|c|c|c|c|}
     \hline
     \rowcolor[HTML]{C0C0C0} 
@@ -410,7 +411,7 @@ na seção 4.3.3 deste capítulo.
 
 \section{Requisitos}
 
-Os requisitos iniciais do aplicativo foram elicitados a partir do primeiro questionário e uma pequisa realizada 
+Os requisitos iniciais do aplicativo foram elicitados a partir do primeiro questionário e uma pesquisa realizada 
 com os principais aplicativos sobre ciclo menstrual no mercado.  
 um \emph{Rich Picture} então foi montado para facilitar a apresentação dos requisitos, conforme ilustrado na Figura \ref{fig08}.
 A partir dessa elicitação, foi possível elaborar um protótipo utilizando o Figma. O protótipo passou por 
@@ -439,7 +440,7 @@ fase do ciclo a usuária se encontra.
 
 \subsection{Protótipo de Alta Fidelidade}
 
-O protótipo de alta fidelidade conta com a apresentação 
+O protótipo de alta fidelidade desenvolvido no Figma, conta com a apresentação 
 inicial do aplicativo com a logo. Depois, a usuária 
 pode escolher entre entrar em uma conta existente ou criar 
 uma nova (vide Figura \ref{fig09}). Caso a pessoa crie uma conta 
@@ -454,61 +455,41 @@ e uma página informativa (vide Figura \ref{fig11}).
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[keepaspectratio=true,scale=0.38]{figuras/prototipo1-v.png}
+    \includegraphics[keepaspectratio=true,scale=0.3]{figuras/prototipo1-v.png}
     \caption{Protótipo - Entrar, Criar Conta e Questionário}
         \label{fig09}
 \end{figure}
 
-
 \begin{figure}[ht] 
     \centering
-    \includegraphics[keepaspectratio=true,scale=0.38]{figuras/prototipo2-v.png}
+    \includegraphics[keepaspectratio=true,scale=0.3]{figuras/prototipo2-v.png}
     \caption{Protótipo - Página Principal, Sobre a Fase e Adicionar Ciclo}
         \label{fig10}
 \end{figure}
 
-
-
 \begin{figure}[ht]
     \centering
-    \includegraphics[keepaspectratio=true,scale=0.4]{figuras/prototipo3.pdf}
-    \caption{Protótipo - Sobre a Fase e Perfil}
+    \includegraphics[keepaspectratio=true,scale=0.3]{figuras/prototipo3-v.png}
+    \caption{Protótipo - Avaliação, Previsão e Perfil}
         \label{fig11}
 \end{figure}
-
-\subsection{\emph{Product Backlog}}
-Como uma forma de modelagem de acordo com a metodologia Scrum, 
-um \emph{product backlog} foi construído utilizando um total de 
-sete temas: conta, questionário, sobre a fase, previsão, perfil, 
-calendário e documentação.
-
-\begin{itemize}
-    \item P01: Conta -> envolverá a parte de criar uma conta nova e entrar em uma conta já existente;
-    \item P02: Questionário -> envolverá a criação do questionário inicial do aplicativo e sua possível edição;
-\item P03: Sobre a Fase -> envolverá a criação de textos informativos sobre a fase;
-\item P04: Previsão -> envolverá a sugestão de tarefas e sintomas que podem aparecer na respectiva fase do ciclo;
-\item P05: Perfil -> envolverá a edição do perfil, como mudança de senha e configurações;
-\item P06: Calendário -> envolverá a criação do calendário que mostrará o ciclo completo e as fases, e
-\item P07: Documentação -> envolverá toda a atividade de documentação do aplicativo.
-
-\end{itemize}
 
 \section{Arquitetura}
 
 O aplicativo é construído com o \emph{framework} React Native que gera aplicativos nativos Android e IOS. 
-Ele se comunica com o Firebase Authentication que fornece serviços back-end para autenticar 
+Ele se comunica com o Firebase Authentication que fornece serviços \emph{backend} para autenticar 
 o usuário no aplicativo. O Firebase Authentication suporta 
 autenticação usando senhas, números de telefone, provedores de identidade como Google, Facebook, Twitter e 
 outros. Na Aplicação é utilizado para criação de usuário através de e-mail e senha ou 
 pelo Google \emph{sing-in}. 
 
 As credenciais são armazenadas no Firebase e são utilizadas para realizar o 
-login e a recuperação de senha. Para cada usuário é gerado um token e um numero único chamado uid, isso 
+\emph{login} e a recuperação de senha. Para cada usuário é gerado um token e um numero único chamado uid, isso 
 permite fazer requisições seguras para as funções existentes na Cloud functions, que checam se as credenciais 
 são existentes e validas.
 
 As funções do Cloud Functions são responsáveis por executarem regras de negócio e 
-pela comunicacão com a base de dados Firestore, lendo, inserindo e atualizando os dados. 
+pela comunicação com a base de dados Firestore, lendo, inserindo e atualizando os dados. 
 O Firestore é um banco de dados em nuvem NoSQL flexível e escalável para armazenar e sincronizar dados.
 Uma vantagem de utilizar essa arquitetura é que utilizando a própria chave do usuário para identificar 
 dados únicos nas tabelas, os acessos ficam rápidos e seguros e a aplicação do React Native reconhece 
@@ -521,14 +502,14 @@ através de \emph{listeners} que houve mudança nos dados do usuário, atualizan
         \label{fig12}
 \end{figure}
 
-\subsection{Arquitetura Frontend}
+\subsection{Arquitetura \emph{Frontend}}
 
 Na imagem \ref{fig13} temos a organização da pasta do projeto \emph{frontend}. No React Native, fora 
 da pasta \emph{src} tem o arquivo \emph{index.js} que initializa o aplicativo chamando do \emph{App.tsx}. 
 O \emph{App.tsx} é responsável 
 por criar as rotas de navegação e inicializar os contextos. Os \emph{contexts} são utilizados 
 para compartilhamento, 
-persistencia de dados e comunicação com os \emph{services}. Os \emph{services} são resposáveis pela 
+persistência de dados e comunicação com os \emph{services}. Os \emph{services} são responsáveis pela 
 comunicação com 
 os serviços externos, nesse caso com as funções do Cloud Functions. As \emph{scenes} são as 
 telas propriamente ditas 
@@ -540,13 +521,13 @@ nos \emph{managers} arquivos gerais de configuração.
 \begin{figure}[ht]
     \centering
     \includegraphics[keepaspectratio=true,scale=0.6]{figuras/frontend.png}
-    \caption{Visão Arquitetural Frontend}
+    \caption{Visão Arquitetural \emph{Frontend}}
         \label{fig13}
 \end{figure}
-\subsection{Arquitetura Backend}
+\subsection{Arquitetura \emph{Backend}}
 
-A aplicação também se comunica com o serviço back-end Cloud Functions através de requisições https.
-O Cloud Functions permite que você execute automaticamente o código de back-end em resposta a 
+A aplicação também se comunica com o serviço \emph{backend} Cloud Functions através de requisições HTTPS.
+O Cloud Functions permite que você execute automaticamente o código de \emph{backend} em resposta a 
 eventos acionados por recursos do Firebase e solicitações HTTPS. 
 O código é armazenado na nuvem do Google e executado em um ambiente gerenciado, caracterizando 
 uma arquitetura \emph{serveless} em que não há necessidade de gerenciar e dimensionar seus 
@@ -558,7 +539,145 @@ próprios servidores.
     \caption{Funções na \emph{Cloud Functions}}
         \label{fig14}
 \end{figure}
+
+
 \subsection{Sistema de Recomendação}
+
+A função \emph{postUserFeedback} (vide Figura \ref{fig13}) é responsável por conter o sistema de 
+recomendação que atualiza o grupo a qual o usuário está mais próximo e os dados do usuário. 
+
+A figura \ref{fig15} representa a lógica em mais alto nível de como funciona essa função. Ela recebe 
+um \emph{array} do \emph{frontend} com o \emph{feedback} enviado pelo usuário e qual fase o usuário se encontra, 
+depois coleta os dados dos grupos e do usuário do banco de dados e seleciona os dados correspondentes a fase 
+do usuário, soma os pontos ao tipos das tarefas avaliadas pelo usuário, compara os dados das tarefas do usuário 
+com os dados dos grupos, calcula o número de inversões para cada grupo, seleciona o grupo com menor 
+número de inversões, checa se é o primeiro \emph{feedback} do usuário e se sim, adiciona as pontuações do usuário ao grupo correspondente 
+e se não, checa se houve mudança no grupo, se houver mudança ele remove os pontos do usuário do grupo antigo e adiciona ao grupo novo. 
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[keepaspectratio=true,scale=0.14]{figuras/recomendacao.png}
+    \caption{Lógica em Alto Nível da Função \emph{postUserFeedback }}
+        \label{fig15}
+\end{figure}
+
+O sistema de recomendação utiliza de um algoritmo chamado contagem de inversão. 
+Dado um \emph{array} x com x[n] elementos, a contagem de inversão conta o quão longe o \emph{array} x está de ficar 
+ordenado. Se o \emph{array} está ordenado então a contagem é 0, se o \emph{array} está invertido 
+então a contagem é máxima. Ou seja, dado dois elementos x[i] e x[j] uma 
+inversão ocorre se x[i] > x[j] e i<j.
+
+A contagem de inversão foi aplicada no algoritmo utilizando a seguinte lógica. 
+De 12 tarefas para cada tarefa 
+temos 3 possibilidades, ser mais fácil, neutra ou mais difícil. Para cada grupo é montado um \emph{array} 
+com as classificações das tarefas, por exemplo, exercitar - difícil, faxinar - neutro, socializar - fácil e assim 
+sucessivamente para as 12 tarefas, a tarefa é considerada a posição do \emph{array} 
+e o tipo dela o valor para comparação (Vide Figura \ref{fig16}).
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[keepaspectratio=true,scale=0.3]{figuras/code-calForPhase.png}
+    \caption{Função de Cálculo para a Fase}
+        \label{fig16}
+\end{figure}
+
+Da mesma forma é montado um \emph{array} com os dados 
+do usuário, por exemplo, exercitar - neutro, 
+faxinar - fácil, socializar - difícil. O tipo mais votado da tarefa exercitar do usuário é comparada a com o da tarefa 
+exercitar do grupo, 
+neste exemplo é comparado neutro com fácil. Essa comparação gera uma inversão em relação ao grupo. 
+Quando é comparado uma tarefa fácil com uma difícil é contabilizado duas inversões (Vide Figura \ref{fig18}). 
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[keepaspectratio=true,scale=0.4]{figuras/code-countInversions.png}
+    \caption{Função Para Contagem de Inversões}
+        \label{fig18}
+\end{figure}
+
+Um \emph{array} com o numero de inversões é então montado e posteriormente somado para ter o resultado final de qual grupo tem menor número de 
+inversões em relação ao \emph{feedback} do usuário (Vide Figura \ref{fig17}). 
+Para o caso dessa aplicação que possui 12 tarefas, o número mínimo de inversão é 0 e o máximo é 24. Ao comparar os dados do usuário 
+com os outros 4 grupo, o grupo com o menor número de inversões é atribuído ao usuário. 
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[keepaspectratio=true,scale=0.35]{figuras/code-updateInversionLists.png}
+    \caption{Função Para Atualizar \emph{Arrays} de Inversões}
+        \label{fig17}
+\end{figure}
+
+De acordo com as características descritas acima, o sistema de recomendação é classificado como Colaborativo, por inserir o usuário a 
+um grupo mais próximo e fornecer a recomendação de acordo com os dados desse grupo, alem disso ele também pode ser classificado como 
+algoritmo baseado em memória por utilizar de classificações anteriores do usuário para um novo processamento.
+
+
+\section{Aplicativo}
+
+O aplicativo foi desenvolvido com sucesso, integrando todas as tecnologias citadas nas seções anteriores e 
+utilizando o metodologia de desenvolvimento estabelecida. Os requisitos estabelecidos no rickpicture e 
+no protótipo também foram implantados da forma mais fiél possível. 
+
+Tiveram mudanças pontuais em comparação ao que foi estabelecido no TCC1, a tela de avaliação das tarefas e 
+previsão foi separada com o intuito de melhorar a usabilidade, já que as funções das telas são diferentes.
+Alem disso, houve mudança na forma de inserção de um novo ciclo, agora disponível em formato de calendário. 
+Também foi retirado a parte de previsões de sintomas, já que o objetivo estabelecido é focado na recomendações de 
+tarefas e não em possíveis sintomas físicos ou mudanças de humor.
+
+Na fígura \ref{fig19} temos as telas com o login com senha e email, criação de conta com email, nome e senha, 
+login utilizando a conta Google e resete de senha.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[keepaspectratio=true,scale=0.08]{figuras/aplicativo1.png}
+    \caption{\emph{Login}, Criação de Conta, Entrar com o Google e Resete de Senha }
+        \label{fig19}
+\end{figure}
+
+
+Na fígura \ref{fig20} temos as telas do questionário inicial. Ao todos são seis perguntas, qual a data da sua 
+última menstruação; quanto tempo dura normalmente sua menstruação?; quanto tempo dura normalmente seu ciclo?;
+você considera seu ciclo regular? você utiliza metodos contraceptivos hormonais?; você tem algum distúrbio 
+endócrino como ovário policísticos ou outros? e vocé possui sintomas de tensão pré menstrual (TPM)? 
+De acordo com as respostas a usuária será inserida em um grupo inicial.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[keepaspectratio=true,scale=0.08]{figuras/aplicativo4.png}
+    \caption{Questionário Inicial}
+        \label{fig20}
+\end{figure}
+
+Na fígura \ref{fig21} temos as telas com o calendário que informa que fase do ciclo o usuário está através 
+de um estimulo visual com as cores das bolas nas datas e através de um texto. É possível adicionar um novo ciclo 
+clicando no '+', navegar entre as telas do menu, navegar para a tela com um texto sobre a fase e para a tela 
+de recomendação de tarefas ou para o perfil. No perfil é possível responder novamente o questionário ou 
+realizar o logout.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[keepaspectratio=true,scale=0.08]{figuras/aplicativo2.png}
+    \caption{Calendário, Adicionar Novo Ciclo, Sobre a Fase e Perfil}
+        \label{fig21}
+\end{figure}
+
+Na fígura \ref{fig22} temos as telas de previsão e avaliação. Na tela de avaliação é possível enviar 
+um \emph{feedback} com a avaliação do usuário para as tarefas de acordo com a fase do ciclo. Na tela de 
+previsão estão as recomendações dadas ao grupo que o usuário melhor se encaixa de acordo com o sistema de recomendação.
+Enquanto o usuário não tiver enviado uma avaliação a recomendação mostrada será do grupo atribuido quando o 
+usuário respondeu ao questionário, é possível que após enviar as avaliações o usuário seja alocado 
+para o grupo mais próximo.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[keepaspectratio=true,scale=0.08]{figuras/aplicativo3.png}
+    \caption{Tela de Avaliaçao e Previsão}
+        \label{fig22}
+\end{figure}
+
+Uma entrevista guiada por questionário foi feita para coletar o feedback das usuárias e a análise 
+dos resultados será descrita no próximo capítulo. 
+
 
 \section{Considerações Finais do Capítulo}
 
@@ -567,19 +686,16 @@ da ideia para
 esse trabalho na seção de considerações iniciais. Na seção 
 de coleta de dados, 
 foi descrito o processo de definição do aplicativo como 
-plataforma e o primeiro questionário 
+plataforma, o primeiro e o segundo questionário
 para coleta de dados. Na seção de análise de dados, foram 
 listados alguns perfis identificados 
-com a análise de dados do questionário e classificadas as 
+com a análise de dados dos questionários e classificadas as 
 tarefas que demandam mais ou menos energia 
-para serem executadas de acordo com a fase do ciclo menstrual. 
+para serem executadas de acordo com os grupos e as fases do ciclo menstrual. 
 Esse processo levou em consideração 
-as respostas do questionário e a referência bibliográfica. 
-A seção do aplicativo trouxe os requisitos elicitados e 
-uma primeira versão de um \emph{produto backlog}. O aplicativo também conta 
-com a prova de conceito, a qual focou na elaboração de um protótipo de alta fidelidade 
-bem como o desenvolvimento 
-inicial 
-da aplicação, já dispondo do ambiente de desenvolvimento configurado e da tela 
-principal. Por fim, cabe colocar que o aplicativo será chamado Mina. Esse estudo servirá como base para a execução 
-do TCC2.
+as respostas dos questionários e a referência bibliográfica. 
+A seção de requisitos trouxe os requisitos elicitados, 
+a versão de um \emph{produto backlog} e o protótipo de alta fidelidade. 
+Na seção de arquitetura, foram descritos a arquitetura utilizada para desenvolvimento do 
+\emph{frontend}, \emph{backend} e como o algoritmo de recomendação funciona. Por último, mas não menos importante 
+o resultado final do aplicativo Mina com todas as \emph{features} implementadas.
