--- a/tcc2/editaveis/suporteTecnologico.tex
+++ b/tcc2/editaveis/suporteTecnologico.tex
@@ -2,11 +2,13 @@
 \label{ch:suporte}
 
 Neste capítulo, há uma breve descrição de todas as ferramentas que foram 
-utilizadas no desenvolvimento do projeto. 
+utilizadas no desenvolvimento do projeto. Mais detalhes como, o que são as tecnologias, para que são usadas e 
+as versões utilizadas na aplicação são descritos na tabela \ref{tab06}.
 
 No desenvolvimento do aplicativo, foi utilizado o MacOS como sistema 
 operacional; o IntelliJ IDEA como editor de texto; o Android Studio como 
 o emulador de dispositivos Android e o XCode como emulados de dispositivos IOS. 
+
 Na aplicação, foi utilizado o React Native 
 como \emph{framework} para criação de aplicativos nativos; o TypeScript como linguagem 
 de programação, utilizada com o React Native; o Firebase Authetication para controle de acesso; 
@@ -15,7 +17,7 @@ como serviço \emph{backend} e o Javascript
 como linguagem de programação \emph{backend}.
 
 As partes envolvendo o código, documentação e escrita do trabalho estão disponíveis 
-no Github que utiliza o Git para controle de versão.
+em um repositório do Github que utiliza o Git para controle de versão.
 
 O gerenciamento das tarefas referentes ao desenvolvimento do aplicativo foi realizado através do Zenhub, 
 aplicativo disponível como extensão para o Github, 
@@ -26,13 +28,14 @@ A escrita do TCC foi realizada utilizando o LaTex com base em um \emph{template}
 disponibilizado pela Faculdade do Gama em um repositório do GitHub. 
 
 \begin{table}[]
+	\centering
+    \caption{Suporte Tecnológico}
+\label{tab06}
 \begin{tabular}{|c|c|c|c|c}
 \cline{1-4}
 \cellcolor[HTML]{C0C0C0}Tecnologia                                                                  & \cellcolor[HTML]{C0C0C0}O que é                                                                                                   & \cellcolor[HTML]{C0C0C0}Utilização                                    & \cellcolor[HTML]{C0C0C0}Versão &  \\ \cline{1-4}
 \begin{minipage} [t] {0.3\textwidth} \centering  React Native \cite{reactNative} \end{minipage}                     & \begin{minipage} [t] {0.3\textwidth} \centering  Bibliotéca Javascript criada pelo Facebook.  \end{minipage} 	& \begin{minipage} [t] {0.2\textwidth} \centering \emph{Framework} para criação de aplicativos nativos \end{minipage}	 & \begin{minipage} [t] {0.1\textwidth} \centering  0.68 \end{minipage}  &  \\ \cline{1-4}
 \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  TypeScript \cite{typescript}\end{minipage} & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  Linguagem de programação de código aberto desenvolvida pela Microsoft.   \end{minipage}                                              & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.2\textwidth} \centering  Linguagem de programação     \end{minipage}  & \cellcolor[HTML]{EFEFEF} \begin{minipage} [t] {0.1\textwidth} \centering  4.4.4 \end{minipage} &  \\ \cline{1-4}
-\begin{minipage} [t] {0.3\textwidth} \centering  Firebase \cite{firebase2011} \end{minipage}                   & \begin{minipage} [t] {0.3\textwidth} \centering  Plataforma desenvolvida pelo Google para a criação de aplicativos \emph{web} e móveis\end{minipage}                & \begin{minipage} [t] {0.2\textwidth} \centering  Banco de dados, autenticação e funções  \end{minipage}                   & \begin{minipage} [t] {0.1\textwidth} \centering  - \end{minipage} &  \\ \cline{1-4}
-\begin{minipage} [t] {0.3\textwidth} \centering Trello \cite{trello2011} \end{minipage}                     & \begin{minipage} [t] {0.3\textwidth} \centering  Aplicação \emph{web} baseada no sistema Kanbam, que auxilia no gerenciamento de tarefas para times grandes ou pessoas individuais.   \end{minipage} 	& \begin{minipage} [t] {0.2\textwidth} \centering Gerenciamento de tarefas relativas ao desenvolvimento dos TCCs e registro de artigos. \end{minipage}	 & \begin{minipage} [t] {0.1\textwidth} \centering  - \end{minipage} &  \\ \cline{1-4}
 \end{tabular}
 \end{table}
 
@@ -41,6 +44,8 @@ disponibilizado pela Faculdade do Gama em um repositório do GitHub.
 	\begin{tabular}{|c|c|c|c|c}
 	\cline{1-4}
 	\cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  Zenhub \cite{zenhub2020} \end{minipage} & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering   Ferramenta adequada, focada em: rastreamento; planejamento e relatórios das \emph{features} de projetos no GitHub.   \end{minipage}             & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.2\textwidth} \centering  Gerenciamento de tarefas relacionadas ao desenvolvimento da aplicação.  \end{minipage}  & \begin{minipage} [t] {0.1\textwidth} \centering  - \end{minipage} &  \\ \cline{1-4}
+	\begin{minipage} [t] {0.3\textwidth} \centering  Firebase \cite{firebase2011} \end{minipage}                   & \begin{minipage} [t] {0.3\textwidth} \centering  Plataforma desenvolvida pelo Google para a criação de aplicativos \emph{web} e móveis\end{minipage}                & \begin{minipage} [t] {0.2\textwidth} \centering  Banco de dados, autenticação e funções  \end{minipage}                   & \begin{minipage} [t] {0.1\textwidth} \centering  - \end{minipage} &  \\ \cline{1-4}
+	\begin{minipage} [t] {0.3\textwidth} \centering Trello \cite{trello2011} \end{minipage}                     & \begin{minipage} [t] {0.3\textwidth} \centering  Aplicação \emph{web} baseada no sistema Kanbam, que auxilia no gerenciamento de tarefas para times grandes ou pessoas individuais.   \end{minipage} 	& \begin{minipage} [t] {0.2\textwidth} \centering Gerenciamento de tarefas relativas ao desenvolvimento dos TCCs e registro de artigos. \end{minipage}	 & \begin{minipage} [t] {0.1\textwidth} \centering  - \end{minipage} &  \\ \cline{1-4}
 	\begin{minipage} [t] {0.3\textwidth} \centering  Slack \cite{slack2013} \end{minipage}                   & \begin{minipage} [t] {0.3\textwidth} \centering Plataforma de comunicação que permite a criação de times e a organização de canais de conversas por tópicos, grupos privados ou mensagens diretas.  \end{minipage}                & \begin{minipage} [t] {0.2\textwidth} \centering  Comunicação com os orientadores \end{minipage}        & \begin{minipage} [t] {0.1\textwidth} \centering  - \end{minipage} &  \\ \cline{1-4}
 	\begin{minipage} [t] {0.3\textwidth} \centering  IntelliJ IDEA \cite{intelij} \end{minipage}                     & \begin{minipage} [t] {0.3\textwidth} \centering  Ambiente de desenvolvimento integrado desenvolvido pela JetBrains \end{minipage} 	& \begin{minipage} [t] {0.2\textwidth} \centering Ambiente de desenvolvimento \end{minipage}	 & \begin{minipage} [t] {0.1\textwidth} \centering  2021.3.1 \end{minipage}  &  \\ \cline{1-4}
 	\cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  Android Studio \cite{android2020} \end{minipage} & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering Ambiente de desenvolvimento para aplicativos androids oficial do Google. \end{minipage}                                              & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.2\textwidth} \centering  Geração de dispositivos virtuais android \end{minipage}  & \cellcolor[HTML]{EFEFEF} \begin{minipage} [t] {0.1\textwidth} \centering  2021.1.1 \end{minipage} &  \\ \cline{1-4}
@@ -48,6 +53,12 @@ disponibilizado pela Faculdade do Gama em um repositório do GitHub.
 	\begin{minipage} [t] {0.3\textwidth} \centering  Xcode \end{minipage}                   & \begin{minipage} [t] {0.3\textwidth} \centering  Plataforma desenvolvida pelo Google para a criação de aplicativos \emph{web} e móveis.\end{minipage}                & \begin{minipage} [t] {0.2\textwidth} \centering  Banco de dados e autenticação .      \end{minipage}                   & \begin{minipage} [t] {0.1\textwidth} \centering  - \end{minipage}                              &  \\ \cline{1-4}
 	\begin{minipage} [t] {0.3\textwidth} \centering Git \cite{git2020} \end{minipage}                     & \begin{minipage} [t] {0.3\textwidth} \centering  Ferramenta gratuita e de código livre para controle de versão.  \end{minipage} 	& \begin{minipage} [t] {0.2\textwidth} \centering Controle de versão de código e escrita dos TCCs. \end{minipage}	 & \begin{minipage} [t] {0.1\textwidth} \centering  2.30.1 \end{minipage}  &  \\ \cline{1-4}
 	\cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  GitHub \cite{github2020} \end{minipage} & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering Plataforma \emph{online} de desenvolvimento de software que permite hospedar códigos e utilizar o controle de versão do Git. \end{minipage}                                              & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.2\textwidth} \centering  Repositório da aplicação e TCCs.   \end{minipage}  & \cellcolor[HTML]{EFEFEF} \begin{minipage} [t] {0.1\textwidth} \centering  2020.3.1 \end{minipage} &  \\ \cline{1-4}
+\end{tabular}
+\end{table}
+
+\begin{table}[]
+	\begin{tabular}{|c|c|c|c|c}
+	\cline{1-4}
 	\cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  LaTex \cite{latex2020} \end{minipage} & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering O LaTex é utilizado como padão para comunicação e publicação de documentos científicos, estando disponível como software livre. \end{minipage}    & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.2\textwidth} \centering  Utilizado localmente para edição de texto utilizando o template padrão disponibilizado pela Faculdade do Gama.  \end{minipage}  & \cellcolor[HTML]{EFEFEF} \begin{minipage} [t] {0.1\textwidth} \centering  TeX Live 2017/Debian \end{minipage} &  \\ \cline{1-4}
 \end{tabular}
 \end{table}
