--- a/tcc2/tcc.tex
+++ b/tcc2/tcc.tex
@@ -33,6 +33,7 @@
 \input{editaveis/metodologia}
 \input{editaveis/proposta}
 \input{editaveis/capfinal}
+\input{editaveis/conclusao}
 %\input{editaveis/consideracoes}
 %\input{editaveis/textoepostexto}
 %\input{editaveis/elementosdotexto}
